some api done
