# server/router/index.js
@@ -2,4 +2,5 @@ const Auth = require("./authRoute");
 const Branch = require("./branchRoute");
 const Company = require("./companyRoute");
 const Generics = require("./genericsRoute");
-module.exports = [Auth, Branch, Company, Generics];
+const Dosages = require("./dosageRoute");
+module.exports = [Auth, Branch, Company, Generics, Dosages];
